# GetOSTheme

./: .gitignore  CHANGELOG.md  DOCS.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: readme.md
DOCS/getostheme/: index.md  module.md
documentation/reference/: MODULES.md  README.md
documentation/reference/getostheme/: index.md  module.md
getostheme/: __init__.py  __main__.py
