[tool.poetry]
name = "getostheme"
version = "2020.4.0"
description = "Use this module to get the OS theme (dark/light)"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FredHappyface/Python.GetOSTheme"
repository = "https://github.com/FredHappyface/Python.GetOSTheme"
documentation = "https://github.com/FredHappyface/Python.GetOSTheme/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
getostheme = 'getostheme:cli'

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = {version = "^5.15.1", optional = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
