[tool.poetry]
name = "getostheme"
version = "2021"
license = "mit"
description = "Use this module to get the OS theme (dark/light)"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FredHappyface/Python.GetOSTheme"
repository = "https://github.com/FredHappyface/Python.GetOSTheme"
documentation = "https://github.com/FredHappyface/Python.GetOSTheme/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
getostheme = 'getostheme:cli'

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = { version = "<6,>=5.15.10", optional = true }

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]
