[tool.poetry]
name = "getostheme"
version = "2024.0.1"
license = "mit"
description = "Use this module to get the OS theme (dark/light)"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FredHappyface/Python.GetOSTheme"
repository = "https://github.com/FredHappyface/Python.GetOSTheme"
documentation = "https://github.com/FredHappyface/Python.GetOSTheme/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
getostheme = 'getostheme:cli'

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = { version = "<6,>=5.15.10", optional = true }

[tool.poetry.extras]
qt = ["PyQt5"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
handsdown = "^2.1.0"
coverage = "^7.4.0"
ruff = "^0.1.13"
blackt = "^2024.0.1"
pyright = "^1.1.347"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # type annotation for self in method
    "COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
    "N802", "N803", "N806", "N812", "N813",  # pep8 naming
    "PLR09",  # pylint refactor too many
    "TCH",  # type check blocks
    "W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pyright]
venvPath = "."
venv = ".venv"
